--- a/index.html
+++ b/index.html
@@ -3,11 +3,73 @@
   <head>
     <meta charset="utf-8" />
     <title>Le Soupeur Formuleur</title>
+    <link rel="stylesheet" href="assets/css/style.css" />
   </head>
   <body>
-    <div id="Bleu">
-
-
-    </div>
+    <form action="index.html" method="post">
+      <fieldset id="Blue">
+        <legend id="Blue">Votre identité</legend>
+          <div>
+            <ol>
+              <li>
+                <label for="name">Nom :</label>
+                <input type="text" name="user_name" placeholder="Nom" />
+              </li>
+              <li>
+                <label for="firstName">Prénom :</label>
+                <input type="text" name="user_firstName" placeholder="Prénom" />
+              </li>
+              <li>
+                <label for="mail">Adressse mail :</label>
+                <input type="email" name="user_mail" placeholder="Adresse mail" />
+              </li>
+            </ol>
+          </div>
+      </fieldset>
+      <fieldset id="Violet">
+        <legend id="Violet">Adresse de livraison</legend>
+          <div>
+            <ol>
+              <li>
+                <label for="adress">Adresse :</label>
+                <input type="text" name="user_adress" id="adress" />
+              </li>
+              <li>
+                <label for="zipCode">Code postal :</label>
+                <input type="text" name="user_zipCode" placeholder="Code postal" />
+              </li>
+              <li>
+                <label for="city">Ville :</label>
+                <input type="text" name="user_city" placeholder="Ville" />
+              </li>
+            </ol>
+          </div>
+      </fieldset>
+      <fieldset id="Pink">
+        <legend id="Pink">Informations de règlement</legend>
+          <div>
+            <ol>
+              <li>
+                <label for="cardType">Type de carte bancaire :</label>
+                  <div><input type="radio" name="user_cardType" />VISA</div>
+                  <div><input type="radio" name="user_cardType" />Mastercard</div>
+              </li>
+              <li>
+                <label for="cardNumber">Numéro de carte :</label>
+                <input type="text" name="user_cardNumber" placeholder="Numéro de carte" />
+              </li>
+              <li>
+                <label for="securityCode">Code de sécurité :</label>
+                <input type="text" name="user_securityCode" placeholder="Code de sécurité" />
+              </li>
+              <li>
+                <label for="holder">Nom du titulaire :</label>
+                <input type="text" name="user_holderName" placeholder="Nom du titulaire" />
+              </li>
+            </ol>
+          </div>
+      </fieldset>
+      <button type="button" name="button">J'achète !</button>
+    </form>
   </body>
 </html>
